# meanscout-api

./: .gitignore  Cargo.toml  Config.toml  Makefile  README.md  Rocket.toml  cert.pem  config.json  data.csv  key.pem  license  pits.csv  settings.toml
.github/workflows/: rust.yml
docs/: README.md
docs/Meanscout/.obsidian/: community-plugins.json  workspace.json
docs/Meanscout/.obsidian/plugins/obsidian-style-settings/: data.json
docs/Meanscout/.obsidian/plugins/webpage-html-export/: data.json
logs/: README.md
src/: _main.rs  catchers.rs  config.rs  csvstuff.rs  data_utils.rs  graphs.rs  main.rs  settings.rs
src/paths/: data.rs  graphs.rs  logs.rs  mod.rs
