[package]
name = "meanapi"
version = "1.0.0"
edition = "2021"
authors = ["Aiden Lee <aidenjlee9478@gmail.com>"]
description = "The scouting API backend for FRC Team 4198"
license = "MIT"
repository = "https://github.com/4198-Programmers/meanscout-api-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc", features = ["tls", "json"]}
rocket_contrib = { version = "0.4.11", features = ["tera_templates"]}
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
chrono = { version = "0.4.23" }
config = { version = "0.13.3" }
tera = "1.18.1"
lazy_static = "1.4.0"
csv = { version = "1.2.1" }
