[package]
name = "meanapi"
version = "0.4.19"
edition = "2021"
authors = ["Aiden Lee <aidenjlee9478@gmail.com>"]
description = "The scouting API backend for FRC Team 4198"
license = "MIT"
repository = "https://github.com/4198-Programmers/meanscout-api"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", features = ["json"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
tower-http = { version = "0.4.0", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = true, features = ["alloc"] }
chrono = { version = "0.4.23" }
config = { version = "0.13.3" }
tera = "1.18.1"
lazy_static = "1.4.0"
csv = { version = "1.2.1" }
